config/fr-production/ingress/traefik/traefik-services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-api
  namespace: ingress
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9100
      protocol: TCP
      targetPort: 9100
    - name: traefik
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/instance: traefik-ingress
    app.kubernetes.io/name: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-lb
  namespace: ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik-ingress.fr-production.miniature-fiesta.ml
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-ingress
    app.kubernetes.io/name: traefik
---
