config/fr-production/ingress/traefik/traefik-dashboard.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress-dashboard
  namespace: ingress
  labels:
    ingress: traefik
spec:
  rules:
    - host: traefik-dashboard.fr-production.miniature-fiesta.ml
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name:  traefik-ingress-api
                port:
                  number: 9000
---
